testsuite/tests/rename/should_fail/SimilarNamesImport_aux.hs
module SimilarNamesImport_aux where

xyzzy :: Double
xyzzy = exp $ pi * sqrt 163


data Drizzle = MkD { dizzy :: Int }
data Frizzle = MkE { fizzy :: Bool }

data Wibble

